--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -67,6 +67,12 @@
                 </div>
 
                 <div class="user-card__actions">
+                    <a
+                        href="{{ url_for('user_profile', user_id=user.id) }}"
+                        class="btn btn--ghost btn--small"
+                    >
+                        Профиль
+                    </a>
                     {% if user.is_admin %}
                     <form method="post" action="{{ url_for('admin_revoke', user_id=user.id) }}" onsubmit="return confirm('Снять права администратора?');">
                         <button
