--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -52,7 +52,7 @@
                 {% for item in recipe.ingredients %}
                 <li>
                     <span>{{ item.name }}</span>
-                    <span class="recipe-ingredients__amount">{{ '%.2f' % item.amount }}</span>
+                    <span class="recipe-ingredients__amount">{{ format_amount(item.amount, item.unit) }}</span>
                 </li>
                 {% endfor %}
             </ul>
