--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -78,6 +78,8 @@
         </ol>
     </div>
 </section>
+{% endblock %}
+{% block extra_scripts %}
 <script>
     const stepImages = document.querySelectorAll(".recipe-step-item__image");
     const modalTemplate = `
