--- a/static/css/style.css
+++ b/static/css/style.css
@@ -987,6 +987,9 @@ body {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
+      display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
     /* align-items: center; */
 }
 
@@ -1027,6 +1030,82 @@ body {
     max-width: 40%;
     border-radius: var(--radius-md);
     object-fit: cover;
+}
+
+.checkbox-ios {
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    height: 28px;
+    line-height: 28px;
+    position: relative;
+    font-size: 14px;
+    user-select: none;
+}
+
+.checkbox-ios .checkbox-ios-switch {
+    position: relative;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 56px;
+    height: 28px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 25% / 50%;
+    background: #eee;
+    transition: 0.2s ease;
+}
+
+.checkbox-ios .checkbox-ios-switch:before {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: #fff;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+    transition: 0.15s ease;
+}
+
+.checkbox-ios input[type="checkbox"] {
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.checkbox-ios input[type="checkbox"]:not(:disabled):active + .checkbox-ios-switch:before {
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+}
+
+.checkbox-ios input[type="checkbox"]:checked + .checkbox-ios-switch {
+    background: var(--accent);
+}
+
+.checkbox-ios input[type="checkbox"]:checked + .checkbox-ios-switch:before {
+    transform: translateX(28px);
+}
+
+.checkbox-ios input[type="checkbox"]:not(:disabled) + .checkbox-ios-switch {
+    cursor: pointer;
+    border-color: rgba(0, 0, 0, 0.3);
+}
+
+.checkbox-ios input[type="checkbox"]:disabled + .checkbox-ios-switch {
+    filter: grayscale(70%);
+    border-color: rgba(0, 0, 0, 0.1);
+}
+
+.checkbox-ios input[type="checkbox"]:disabled + .checkbox-ios-switch:before {
+    background: #eee;
+}
+
+.checkbox-ios.focused .checkbox-ios-switch:before {
+    box-shadow: inset 0 0 4px var(--accent);
 }
 
 /* forms & inputs enhancements */
