--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %}FoodPlanner{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='/templates/favicon.ico') }}" />
 </head>
 <body>
 <header class="header">
